--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,7 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example, eval = FALSE}
 library(untheme)
 library(shiny)
+library(shiny.semantic)
 library(ggplot2)
 
 ui <- fluidUnTheme(
